# tasca_CE_5073

./: predict_app.py  predict_services.py  pyproject.toml
models/: decision_tree_model.pkl  logistic_regression_model.pkl  svm_model.pkl
tasca_ce_5073/: client.ipynb  modelatge.ipynb
