[tool.poetry]
name = "tasca-ce-5073"
version = "0.1.0"
description = ""
authors = ["sergicladeraben <sergicladera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
flask = "^3.0.0"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
